# UWP_DX11

./: .gitignore  App.xaml  App.xaml.cpp  App.xaml.h  CMakeLists.txt  DirectXPage.xaml  DirectXPage.xaml.cpp  DirectXPage.xaml.h  Package.appxmanifest  README.md  UWP_DX11.sln  UWP_DX11.vcxproj  UWP_DX11.vcxproj.filters  UWP_DX11Main.cpp  UWP_DX11Main.h
Common/: DeviceResources.cpp
Content/: Sample3DSceneRenderer.cpp  Sample3DSceneRenderer.h  SampleFpsTextRenderer.cpp  SampleFpsTextRenderer.h  ShaderStructures.h
